<resources>
    <string name="app_name">GeoApp1.0</string>
    <string name="cbRememberMe">Remember Me</string>
    <string name="btnLogin">Login</string>
    <string name="txtPassHint">Password</string>
    <string name="txtEmailHint">Email Address</string>
    <string name="txtRegister">Register</string>
    <string name="txtforgotPw">Forgot Password ?</string>
    <string name="createGroupTitle">Create Group</string>
    <string name="edGroupName">Enter Group Name</string>
    <string name="edGroupDesc">Enter Group Description</string>
    <string name="btnReset">Reset</string>
    <string name="btnCreate">Create Group</string>
    <string name="txtSearchGroupTitle">Search Groups</string>
    <string name="txtSearch">Type to Search</string>
    <string name="btnSearch">Search</string>
    <string name="txtManageTitle">Manage Group</string>
    <string name="btnManageGroupBack">Go Back</string>
    <string name="txtInboxTitle">Inbox</string>
    <string name="btnInboxBack">Go Back</string>
    <string name="txtOptionsTitle">Options</string>
    <string name="btnOptionsBack">Go Back</string>
    <string name="btnSearchBack">Go Back</string>
    <string name="btnCreateGroupBack">Go Back</string>
    <string name="txtViewGroupTitle">View Group</string>
    <string name="btnViewGroupBack">Go Back</string>
    <string name="txtRegTitle">User Registration</string>
    <string name="btnRegoBack">Go Back</string>
    <string name="txtEmail">Enter Email Address</string>
    <string name="txtPassword">Enter Password</string>
    <string name="btnRegister">Register</string>
    <string name="txtPwConfirm">Confirm Password</string>
    <string name="txtConfirmEmail">Confrirm Email Address</string>
    <string name="txtRegName">Enter Name</string>
    <string name="txtLoginOr">Or</string>
    <string name="btnRegisterUser">Register</string>
    <string name="title_activity_maps">Map</string>


</resources>
