<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asanka.geoapp10.Registration"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/txtRegTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtRegTitle"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"/>

        <Button
            android:text="@string/btnRegoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegoBack"
            android:layout_weight="0.15"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtRegName"
            android:hint="@string/txtRegName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEmail"
            android:hint="@string/txtEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtConfirmEmail"
            android:hint="@string/txtConfirmEmail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword"
            android:hint="@string/txtPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPwConfirm"
            android:hint="@string/txtPwConfirm"/>

        <Button
            android:text="@string/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"/>
    </LinearLayout>

</RelativeLayout>
