<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asanka.geoapp10.CreateGroup"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/createGroupTitle"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white" />

        <Button
            android:text="@string/btnCreateGroupBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreateGroupBack"
            android:layout_weight="0.15" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edGroupName"
            android:layout_weight="1"
            android:hint="@string/edGroupName"
            android:textColor="@android:color/white"
            android:layout_marginTop="50dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edGroupDesc"
            android:layout_weight="1"
            android:hint="@string/edGroupDesc"
            android:singleLine="false"
            android:textColor="@android:color/white"
            android:layout_marginTop="50dp"
            android:maxLength="100"
            android:maxLines="4"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp">

        <Button
            android:text="@string/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreate"
            android:layout_weight="1"/>

        <Button
            android:text="@string/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReset"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
