<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asanka.geoapp10.Login"
    android:background="@drawable/background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/textFieldHolder">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etUserEmail"
            android:hint="@string/txtEmailHint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassWord"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:hint="@string/txtPassHint"
            android:textColorLink="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp">

        <CheckBox
            android:text="@string/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbRememberMe"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:text="@string/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_marginTop="15dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linksHolder"
        android:layout_marginTop="330dp">

        <TextView
            android:text="@string/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtRegister"
            android:layout_weight="1"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"

            android:textSize="16sp" />

        <TextView
            android:text="@string/txtforgotPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtforgotPw"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="textEnd"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        >

        <ImageView
            android:layout_width="223dp"
            android:layout_height="74dp"
            app:srcCompat="@drawable/version"
            android:id="@+id/imageView"

            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>
